WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230890
REGRESSION(
r283158
): TestWebKitAPI.WebKit.AddAndRemoveDataDetectors is crashing on iOS
https://bugs.webkit.org/show_bug.cgi?id=230890
Summary
REGRESSION(r283158): TestWebKitAPI.WebKit.AddAndRemoveDataDetectors is crashi...
Antti Koivisto
Reported
2021-09-28 04:18:20 PDT
ASSERTION FAILED: !m_count /Users/antti/Build/Debug-iphonesimulator/usr/local/include/wtf/CheckedRef.h(230) : WTF::CanMakeCheckedPtrBase<WTF::SingleThreadIntegralWrapper<unsigned short>, unsigned short>::~CanMakeCheckedPtrBase() [StorageType = WTF::SingleThreadIntegralWrapper<unsigned short>, PtrCounterType = unsigned short] 1 0x12f095b2c WTFCrash 2 0x1503bbbf0 WTF::NeverDestroyed<WTF::String, WTF::AnyThreadsAccessTraits>::operator WTF::String const&() const 3 0x15323d258 WTF::CanMakeCheckedPtrBase<WTF::SingleThreadIntegralWrapper<unsigned short>, unsigned short>::~CanMakeCheckedPtrBase() 4 0x153243614 WebCore::Layout::Box::~Box()
Attachments
Patch
(5.80 KB, patch)
2021-09-28 04:24 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-09-28 04:24:23 PDT
Created
attachment 439456
[details]
Patch
EWS
Comment 2
2021-09-28 05:55:17 PDT
Committed
r283165
(
242213@main
): <
https://commits.webkit.org/242213@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439456
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-09-28 05:56:17 PDT
<
rdar://problem/83619263
>
ayumi_kojima
Comment 4
2021-09-28 08:44:53 PDT
***
Bug 230892
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug