REGRESSION(r283158): TestWebKitAPI.WebKit.AddAndRemoveDataDetectors is crashing on iOS https://bugs.webkit.org/show_bug.cgi?id=230890

Unreviewed.


* editing/cocoa/DataDetection.mm:
(WebCore::DataDetection::detectContentInRange):

Scope TextIterator so it is not in stack when DOM is being mutated.


Canonical link: https://commits.webkit.org/242213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283165 268f45cc-cd09-0410-ab3c-d52691b4dbfc